@@ -2961,7 +2961,8 @@ main (int argc,
 {
 	GSearchWindow * gsearch;
 	GOptionContext * context;
-	GtkWidget * window;	
+	GtkWidget * window;
+	GError * error = NULL;
 	EggSMClient * client;
 
 	bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
@@ -2974,7 +2975,13 @@ main (int argc,
 	g_option_context_add_main_entries (context, GSearchGOptionEntries, GETTEXT_PACKAGE);
 	g_option_context_add_group (context, gtk_get_option_group (TRUE));
 	g_option_context_add_group (context, egg_sm_client_get_option_group ());
-	g_option_context_parse (context, &argc, &argv, NULL);
+	g_option_context_parse (context, &argc, &argv, &error);
+
+	if (error) {
+		g_printerr (_("Failed to parse command line arguments: %s\n"), error->message);
+		return (-1);
+	}
+
 	g_option_context_free (context);
 
 	g_set_application_name (_("Search for Files"));
