@@ -1,3 +1,8 @@
+2009-09-29  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	*  gsearchtool.c:  Properly handle invalid command line 
+	arguments.
+
 2009-09-28  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	*  gsearchtool-callbacks.c:  Fix possible crash after
